# rust

./: .gitignore  Cargo.toml  README.md
_docs/: 01-basics.md  02-ownership.md  03-collections.md  04-structs.md  05-error-handling.md  06-generics-lifetime.md  07-result-detailed.md  08-closures.md  09-smart-pointers.md  10-threads.md  11-async-await.md  README.md  rust-learning-notes.md
args/src/: main.rs
async-my/: Cargo.toml
async-my/src/: main.rs
axum-api/: Cargo.toml
axum-api/src/: main.rs
channel/src/: main.rs
closures/src/: main.rs
closures/src/inventory/: main.rs
crate-my/: Cargo.toml
crate-my/src/: main.rs
crate-my/src/my/: mod.rs
crate-my/src/test/: mod.rs  test.rs
drop/src/: main.rs
enum-my/: Cargo.toml
enum-my/src/: main.rs
func/src/: main.rs
guessgame/: Cargo.toml
guessgame/src/: main.rs
iterators/src/: main.rs
lifetime/src/: main.rs
mutex/src/: main.rs
ownership/src/: main.rs
slices/src/: main.rs
smart-pointers/src/: main.rs
strings-my/: Cargo.toml
strings-my/src/: main.rs
structs/src/: main.rs
threads/src/: main.rs
trait-my/: Cargo.toml
trait-my/src/: main.rs
variables/src/: main.rs
vec-my/: Cargo.toml
vec-my/src/: main.rs
web/src/: main.rs
